--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "@google-cloud/firestore": "^11.4.0" // Added Firestore, use a recent version
   }
 }
