--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "@google-cloud/firestore": "^11.4.0" // Added Firestore, use a recent version
+    "@google-cloud/firestore": "^11.4.0"
   }
 }
