--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
   "dependencies": {
     "express": "^5.1.0",
     "@google-cloud/firestore": "^7.11.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+
+    "@vitejs/plugin-react": "^4.5.0",
+    "vite": "^6.3.5"
   }
 }
