--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "@google-cloud/firestore": "^7.11.1"
+    "@google-cloud/firestore": "^7.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
