--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+// package.json
 {
   "name": "mohammad-cloud-portfolio",
   "version": "1.0.0",
@@ -5,15 +6,14 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "vite build --config ./vite.config.js",
-    "gcp-build": "npm run build",
+    "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0", 
+    "express": "^5.1.0",
     "@google-cloud/firestore": "^7.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
