--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
     "build": "vite build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "@google-cloud/firestore": "^7.11.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "chart.js": "^3.9.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.5.0",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "tailwindcss": "^4.1.8",
+    "postcss": "^8.5.4",
+    "autoprefixer": "^10.4.21"
   }
 }
