--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postinstall": "npm run build" // Add this line
+    "postinstall": "npm run build"
   },
   "keywords": [],
   "author": "",
