--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
     "build": "npx vite build",
-    "preview": "vite preview",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
